--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 </head>
 
 <body class="text-center">
+
   <img class= "loginbanner" src= "img/logo.png" alt= "Aquí va un logo de Plan Ceibal" width=15% height=15% title="Logo del Plan Ceibal">
   
   <div class="container p-5">
@@ -73,15 +74,14 @@
     <h2 style="font-family: raleway; color: rgb(133, 131, 131);">tu e-commerce favorito</h2>
     <br>
     <br>
-    
     <h2 style="font-size: large; font-style:initial;">¡Bienvenido/a!</h1>
     <h3 style="font-size: large; font-style:initial;">Por favor, ingrese su usuario</h2>
     <br></b>
-    <div id="cajita">
-      <label for="Inemail" style="font-size: medium;">E-mail</label>
-      <input type="email" id="Inemail" size="5" class="form-control" placeholder="Correo electrónico">
-      <label for="Inpassword" style="font-size: medium;">Contraseña</label> <br>
-      <input type="password" id="Inpassword" class="form-control" placeholder="Contraseña">
+    <div class= "signin" id="cajita">
+      <label for="inEmail" style="font-size: medium;">E-mail</label>
+      <input type="email" id="inEmail" size="5" class="form-control" placeholder="Correo electrónico">
+      <label for="inPass" style="font-size: medium;">Contraseña</label> <br>
+      <input type="password" id="inPass" class="form-control" placeholder="Contraseña">
       <br>
     </div>
     <button type="submit" id="LogIN">Ingresar</button>
