--- a/product-info.html
+++ b/product-info.html
@@ -22,17 +22,78 @@
       <a class="py-2 d-none d-md-inline-block" href="categories.html">Categorías</a>
       <a class="py-2 d-none d-md-inline-block" href="products.html">Productos</a>
       <a class="py-2 d-none d-md-inline-block" href="sell.html">Vender</a>
-      <a class="py-2 d-none d-md-inline-block" href="cart.html">Mi carrito</a>
+      <div class="dropdown" id="mainUser" style="display: none;">
+        <button id="userInfo" class="btn btn-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="float: inline-end; margin-top: -25px;">
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+          <a href="cart.html" id="shopCart" class="dropdown-item">Mi carrito</a>
+          <a href="my-profile.html" id= "myProfile" class="dropdown-item">Configuracion</a>
+          <a id="out" class="dropdown-item">Salir</a>
+        </div>
+      </div>
     </div>
   </nav>
-  <div class="container p-5">
-    <div class="alert alert-danger" role="alert" style="position: relative; width:auto; top: 0;">
-      <h4 class="alert-heading">¡A trabajar! :)</h4>
-      <p>Esta sección corresponde a: Entrega 3 (Fecha de entrega: 13/09/2020) y Entrega 4 (Fecha de entrega: 20/09/2020).</p>
-      <hr>
-      <p class="mb-0">Para saber qué debes hacer, fijate en la actividad en CREA correspondiente a esta entrega.</p>
+
+  <br>
+  <div id="carousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carousel" data-slide-to="0" class="active"></li>
+      <li data-target="#carousel" data-slide-to="1"></li>
+      <li data-target="#carousel" data-slide-to="2"></li>
+      <li data-target="#carousel" data-slide-to="3"></li>
+      <li data-target="#carousel" data-slide-to="4"></li>
+    </ol>
+
+    <div id="imagenes" class="carousel-inner">
     </div>
+
+    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Posterior</span>
+    </a>
   </div>
+
+  <div class= "product-info">
+  
+    <div id = "contenedor" style= "float: right;"></div>
+
+    <hr>
+    <hr>
+
+    <a href = "products.html"><button style= "float: right;"> Volver al listado </button></a>
+    <a href = "cart.html"><button style= "float: right;"> Comprar </button></a>
+
+  </div>
+
+  <p>&nbsp;&nbsp;Seccion Comentarios</p>
+  <div id="comentarios"></div>
+    
+  <div id="nuevo-comentario" style="display: none;">
+    <p>&nbsp;&nbsp;Envia un comentario</p>
+    
+    <textarea id="textarea" rows="4" cols="60"></textarea>
+
+    <p>&nbsp;&nbsp;Calificacion: </p>
+
+    <select id="score">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+
+    <br><br>
+
+    <button id="enviar-comentario">Enviar</button>
+  </div>
+  <div id="related-products"></div>
+
+
   <footer class="text-muted">
     <div class="container">
       <p class="float-right">
